--- a/src/ExpenseExplorer.GUI/Components/Pages/Receipts.razor
+++ b/src/ExpenseExplorer.GUI/Components/Pages/Receipts.razor
@@ -1,5 +1,6 @@
 ﻿@page "/receipts"
 @using System.Text.Json
+@using System.Globalization
 @using ExpenseExplorer.API.Contract
 @using ExpenseExplorer.API.Contract.ReadModel
 @using ExpenseExplorer.GUI.Data
@@ -82,19 +83,19 @@
             </RadzenDataGridColumn>
             <RadzenDataGridColumn TItem="PurchaseModel" Property="Quantity" Title="Quantity">
                 <EditTemplate Context="purchase">
-                    <RadzenNumeric TValue="decimal" @bind-Value="purchase.Quantity"/>
+                    <RadzenNumeric ConvertValue="ConvertDecimal" TValue="decimal" @bind-Value="purchase.Quantity"/>
                 </EditTemplate>
             </RadzenDataGridColumn>
             <RadzenDataGridColumn TItem="PurchaseModel" Property="UnitPrice" Title="Unit price"
                                   FormatString="{0:0.00} zł">
                 <EditTemplate Context="purchase">
-                    <RadzenNumeric TValue="decimal" @bind-Value="purchase.UnitPrice"/>
+                    <RadzenNumeric ConvertValue="ConvertDecimal" TValue="decimal" @bind-Value="purchase.UnitPrice"/>
                 </EditTemplate>
             </RadzenDataGridColumn>
             <RadzenDataGridColumn TItem="PurchaseModel" Property="TotalDiscount" Title="Total discount"
                                   FormatString="{0:0.00} zł">
                 <EditTemplate Context="purchase">
-                    <RadzenNumeric TValue="decimal" @bind-Value="purchase.TotalDiscount"/>
+                    <RadzenNumeric ConvertValue="ConvertDecimal" TValue="decimal" @bind-Value="purchase.TotalDiscount"/>
                 </EditTemplate>
             </RadzenDataGridColumn>
             <RadzenDataGridColumn TItem="PurchaseModel" Property="TotalCost" Title="Total cost"
@@ -196,6 +197,7 @@
         <FilterTemplate>
             <RadzenFormField AllowFloatingLabel="false" Text="Min total">
                 <RadzenNumeric
+                    ConvertValue="ConvertOptionalDecimal"
                     ShowUpDown="false"
                     TValue="decimal?"
                     @bind-Value=@_minTotal
@@ -203,6 +205,7 @@
             </RadzenFormField>
             <RadzenFormField AllowFloatingLabel="false" Text="Max total">
                 <RadzenNumeric
+                    ConvertValue="ConvertOptionalDecimal"
                     ShowUpDown="false"
                     TValue="decimal?"
                     @bind-Value=@_maxTotal
@@ -616,5 +619,17 @@
                 await RowExpand(_expanded);
             }
         }
+    }
+
+    private static decimal ConvertDecimal(string arg)
+    {
+        return decimal.TryParse(arg.Replace(",", "."), CultureInfo.InvariantCulture, out var result)
+            ? result
+            : default;
+    }
+
+    private static decimal? ConvertOptionalDecimal(string? arg)
+    {
+        return arg is null ? null : ConvertDecimal(arg);
     }
 }
