--- a/src/ExpenseExplorer.WebApp/Components/App.razor
+++ b/src/ExpenseExplorer.WebApp/Components/App.razor
@@ -11,11 +11,13 @@
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet/>
+    <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
 </head>
 
 <body>
 <Routes/>
 <script src="_framework/blazor.web.js"></script>
+<script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 </body>
 
 </html>
