--- a/src/ExpenseExplorer.WebApp/Components/App.razor
+++ b/src/ExpenseExplorer.WebApp/Components/App.razor
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<Routes/>
+<Routes @rendermode="InteractiveServer"/>
 <script src="_framework/blazor.web.js"></script>
 <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 </body>
