--- a/src/ExpenseExplorer.WebApp/Components/Layout/NavMenu.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Layout/NavMenu.razor
@@ -1,29 +1,5 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">ExpenseExplorer.WebApp</a>
-    </div>
-</div>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="nav flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-    </nav>
-</div>
+﻿<RadzenPanelMenu>
+    <RadzenPanelMenuItem Path="" Match="NavLinkMatch.All" Text="Home" Icon="home" />
+    <RadzenPanelMenuItem Path="counter" Text="Counter" Icon="note_add" />
+    <RadzenPanelMenuItem Path="weather" Text="Weather" Icon="backup" />
+</RadzenPanelMenu>
