Update theme to 'software-dark' in App.razor

--- a/src/ExpenseExplorer.WebApp/Components/App.razor
+++ b/src/ExpenseExplorer.WebApp/Components/App.razor
@@ -11,7 +11,7 @@
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet/>
-    <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
+    <RadzenTheme Theme="software-dark" @rendermode="InteractiveServer" />
 </head>
 
 <body>
